Add: 방 목록 표출 - room app 생성 - room app 안에 model, service, view 디렉토리 및 파일 생성 - 모집 마감 시간이 임박한 순서대로 방 목록 표출 api 추가 - db 커넥션을 위한 connection.py 생성

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/vim,flask,macos,python,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,flask,macos,python,linux
 
+###personal###
+config.py
+*.txt
+
 ### Flask ###
 instance/*
 !instance/.gitignore
