--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aniso8601==7.0.0
 certifi==2020.4.5.1
 click==7.1.2
 Flask==1.1.2
+Flask-Cors==3.0.8
 Flask-GraphQL==2.0.1
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
@@ -16,6 +17,7 @@ Jinja2==2.11.2
 Mako==1.1.2
 MarkupSafe==1.1.1
 promise==2.3
+PyMySQL==0.9.3
 python-dateutil==2.8.1
 python-editor==1.0.4
 Rx==1.6.1
