--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.2
 MarkupSafe==1.1.1
+mysql==0.0.2
+mysqlclient==2.0.1
 promise==2.3
 PyMySQL==0.9.3
 python-dateutil==2.8.1
