--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.4.2
 aniso8601==7.0.0
+attrs==19.3.0
 certifi==2020.4.5.1
 click==7.1.2
 Flask==1.1.2
@@ -16,14 +17,24 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.2
 MarkupSafe==1.1.1
+more-itertools==8.4.0
 mysql==0.0.2
 mysqlclient==2.0.1
+packaging==20.4
+pluggy==0.13.1
 promise==2.3
+py==1.9.0
 PyMySQL==0.9.3
+pyparsing==2.4.7
+pytest==5.4.3
 python-dateutil==2.8.1
 python-editor==1.0.4
 Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.14.0
 SQLAlchemy==1.3.16
+sqlparse==0.3.1
+tabulate==0.8.7
+wcwidth==0.2.5
 Werkzeug==1.0.1
+yoyo-migrations==7.1.2
